Enhance medical record management with improved error handling and validation