@@ -10,6 +10,8 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.Comparator;
 
 @Service
 @Transactional
@@ -49,17 +51,57 @@ public class MedicalRecordService {
 
     // Aşı kayıtları ile ilgili metodlar
     public Vaccination addVaccination(Long medicalRecordId, Vaccination vaccination) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        vaccination.setMedicalRecord(medicalRecord);
-        vaccination.setPet(medicalRecord.getPet());
-        medicalRecord.getVaccinations().add(vaccination);
-        medicalRecordRepository.save(medicalRecord);
-        return vaccination;
+        try {
+            // Validasyon kontrolleri
+            if (vaccination.getVaccineName() == null || vaccination.getVaccineName().trim().isEmpty()) {
+                throw new IllegalArgumentException("Vaccine name cannot be empty");
+            }
+            
+            if (vaccination.getVaccinationDate() == null) {
+                throw new IllegalArgumentException("Vaccination date cannot be null");
+            }
+            
+            // MedicalRecord'u bul
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            
+            // İlişkileri ayarla
+            vaccination.setMedicalRecord(medicalRecord);
+            vaccination.setPet(medicalRecord.getPet());
+            
+            // Aşıyı listeye ekle
+            medicalRecord.getVaccinations().add(vaccination);
+            
+            // Kaydet ve döndür
+            MedicalRecord savedRecord = medicalRecordRepository.save(medicalRecord);
+            
+            // Kaydedilen aşıyı bul ve döndür
+            return savedRecord.getVaccinations()
+                .stream()
+                .filter(v -> v.getVaccineName().equals(vaccination.getVaccineName()) && 
+                       v.getVaccinationDate().equals(vaccination.getVaccinationDate()))
+                .findFirst()
+                .orElse(vaccination);
+        } catch (Exception e) {
+            // Hata durumunda detaylı log çıktısı
+            System.err.println("Error adding vaccination: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to add vaccination: " + e.getMessage(), e);
+        }
     }
 
     public List<Vaccination> getVaccinations(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getVaccinations();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            // Hibernate session'ın açık olduğundan emin olmak için koleksiyonu zorla yükle
+            List<Vaccination> vaccinations = medicalRecord.getVaccinations();
+            // Koleksiyonu başlatmak için size() metodunu çağır
+            vaccinations.size();
+            return vaccinations;
+        } catch (Exception e) {
+            System.err.println("Error getting vaccinations: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get vaccinations: " + e.getMessage(), e);
+        }
     }
 
     // Tedavi kayıtları ile ilgili metodlar
@@ -72,8 +114,16 @@ public class MedicalRecordService {
     }
 
     public List<Treatment> getTreatments(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getTreatments();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            List<Treatment> treatments = medicalRecord.getTreatments();
+            treatments.size(); // Koleksiyonu başlatmak için
+            return treatments;
+        } catch (Exception e) {
+            System.err.println("Error getting treatments: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get treatments: " + e.getMessage(), e);
+        }
     }
 
     // Randevu kayıtları ile ilgili metodlar
@@ -86,16 +136,30 @@ public class MedicalRecordService {
     }
 
     public List<Appointment> getAppointments(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getAppointments();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            List<Appointment> appointments = medicalRecord.getAppointments();
+            appointments.size(); // Koleksiyonu başlatmak için
+            return appointments;
+        } catch (Exception e) {
+            System.err.println("Error getting appointments: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get appointments: " + e.getMessage(), e);
+        }
     }
 
     public List<Appointment> getUpcomingAppointments(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        LocalDate now = LocalDate.now();
-        return medicalRecord.getAppointments().stream()
-                .filter(appointment -> appointment.getAppointmentDate().isAfter(now))
-                .toList();
+        try {
+            List<Appointment> allAppointments = getAppointments(medicalRecordId);
+            LocalDate today = LocalDate.now();
+            return allAppointments.stream()
+                    .filter(appointment -> appointment.getAppointmentDate().isAfter(today))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            System.err.println("Error getting upcoming appointments: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get upcoming appointments: " + e.getMessage(), e);
+        }
     }
 
     // İlaç kayıtları ile ilgili metodlar
@@ -108,18 +172,30 @@ public class MedicalRecordService {
     }
 
     public List<Medication> getMedications(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getMedications();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            List<Medication> medications = medicalRecord.getMedications();
+            medications.size(); // Koleksiyonu başlatmak için
+            return medications;
+        } catch (Exception e) {
+            System.err.println("Error getting medications: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get medications: " + e.getMessage(), e);
+        }
     }
 
     public List<Medication> getCurrentMedications(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        LocalDate now = LocalDate.now();
-        return medicalRecord.getMedications().stream()
-                .filter(medication -> 
-                    medication.getStartDate().isBefore(now) && 
-                    (medication.getEndDate() == null || medication.getEndDate().isAfter(now)))
-                .toList();
+        try {
+            List<Medication> allMedications = getMedications(medicalRecordId);
+            LocalDate today = LocalDate.now();
+            return allMedications.stream()
+                    .filter(medication -> medication.getEndDate() == null || medication.getEndDate().isAfter(today))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            System.err.println("Error getting current medications: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get current medications: " + e.getMessage(), e);
+        }
     }
 
     // Alerji kayıtları ile ilgili metodlar
@@ -132,8 +208,16 @@ public class MedicalRecordService {
     }
 
     public List<Allergy> getAllergies(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getAllergies();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            List<Allergy> allergies = medicalRecord.getAllergies();
+            allergies.size(); // Koleksiyonu başlatmak için
+            return allergies;
+        } catch (Exception e) {
+            System.err.println("Error getting allergies: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get allergies: " + e.getMessage(), e);
+        }
     }
 
     // Kilo kayıtları ile ilgili metodlar
@@ -146,13 +230,27 @@ public class MedicalRecordService {
     }
 
     public List<WeightRecord> getWeightRecords(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getWeightRecords();
+        try {
+            MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
+            List<WeightRecord> weightRecords = medicalRecord.getWeightRecords();
+            weightRecords.size(); // Koleksiyonu başlatmak için
+            return weightRecords;
+        } catch (Exception e) {
+            System.err.println("Error getting weight records: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get weight records: " + e.getMessage(), e);
+        }
     }
 
     public Optional<WeightRecord> getLatestWeight(Long medicalRecordId) {
-        MedicalRecord medicalRecord = getMedicalRecord(medicalRecordId);
-        return medicalRecord.getWeightRecords().stream()
-                .max((w1, w2) -> w1.getRecordDate().compareTo(w2.getRecordDate()));
+        try {
+            List<WeightRecord> weightRecords = getWeightRecords(medicalRecordId);
+            return weightRecords.stream()
+                    .max(Comparator.comparing(WeightRecord::getRecordDate));
+        } catch (Exception e) {
+            System.err.println("Error getting latest weight: " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Failed to get latest weight: " + e.getMessage(), e);
+        }
     }
 }
